--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,5 @@
  * in the user guide at https://docs.gradle.org/4.6/userguide/multi_project_builds.html
  */
 rootProject.name = 'propertyadministration'
+include 'web'
+
