--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,12 @@ dependencies {
     compile group: 'securityfilter', name: 'securityfilter', version: '2.0'
 
     // https://mvnrepository.com/artifact/org.hsqldb/hsqldb
-    compile group: 'org.hsqldb', name: 'hsqldb', version: '2.4.0'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
 
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.15.Final'
+
+    compile 'com.google.cloud:google-cloud-bigquery:1.24.1'
 
     // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'}
