--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,108 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>war</packaging>
+    <groupId>com.example.appengine</groupId>
+    <artifactId>appengine-cloudsql-j8</artifactId>
+
+    <!--
+      The parent pom defines common style checks and testing strategies for our samples.
+      Removing or replacing it should not effect the execution of the samples in anyway.
+    -->
+    <parent>
+        <groupId>com.google.cloud.samples</groupId>
+        <artifactId>shared-configuration</artifactId>
+        <version>1.0.8</version>
+    </parent>
+
+    <!-- [START properties] -->
+    <properties>
+        <!-- INSTANCE_CONNECTION_NAME from Cloud Console > SQL > Instance Details > Properties
+             or gcloud sql instances describe <instance>
+             project:region:instance for Cloud SQL 2nd Generation or
+             project:instance        for Cloud SQL 1st Generation
+        -->
+        <INSTANCE_CONNECTION_NAME>
+            houseadmin-2018:southamerica-east1:usersdb //TODO asdas
+        </INSTANCE_CONNECTION_NAME>
+        <user>Diegonfx</user>
+        <password>Perrito1</password>
+        <database>usersdb</database>
+
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
+    <!-- [END properties] -->
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-api-1.0-sdk</artifactId>
+            <version>1.9.63</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client-appengine</artifactId>
+            <version>1.23.0</version>
+        </dependency>
+
+        <!-- [START dependencies] -->
+        <!-- Driver injected at runtime by the use of <use-google-connector-j> in appengine-web.xml -->
+        <dependency> <!-- Only used locally -->
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.42</version>  <!-- v5.x.x is for production, v6.x.x EAP X DevAPI -->
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud.sql</groupId>
+            <!-- If using MySQL 6.x driver, use mysql-socket-factory-connector-j-6 instead -->
+            <artifactId>mysql-socket-factory-connector-j-6</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+        <!-- [END dependencies] -->
+    </dependencies>
+    <build>
+        <!-- for hot reload of the web application -->
+        <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <webResources>
+                        <!-- in order to interpolate version from pom into appengine-web.xml -->
+                        <resource>
+                            <directory>${basedir}/src/main/webapp/WEB-INF</directory>
+                            <filtering>true</filtering>
+                            <targetPath>WEB-INF</targetPath>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>1.3.1</version>
+                <configuration>
+                    <deploy.promote>true</deploy.promote>
+                    <deploy.stopPreviousVersion>true</deploy.stopPreviousVersion>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
+
 
     <groupId>groupId</groupId>
     <artifactId>Property_Administration</artifactId>
