--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         </INSTANCE_CONNECTION_NAME>
         <user>Diegonfx</user>
         <password>Perrito1</password>
-        <database>usersdb</database>
+        <propertyAdmin.database>usersdb</propertyAdmin.database>
 
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
