--- a/build.gradle
+++ b/build.gradle
@@ -19,5 +19,8 @@ dependencies {
 
     compile 'com.google.cloud:google-cloud-bigquery:1.24.1'
 
+    // https://mvnrepository.com/artifact/joda-time/joda-time
+    compile group: 'joda-time', name: 'joda-time', version: '2.3'
+
     // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'}
