--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,21 @@
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'application'
 
 apply plugin: 'war'
+
+mainClassName = 'DriveQuickstart'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+
+    compile 'com.google.api-client:google-api-client:1.23.0'
+    compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+    compile 'com.google.apis:google-api-services-drive:v3-rev110-1.23.0'
+
     // https://mvnrepository.com/artifact/securityfilter/securityfilter
     compile group: 'securityfilter', name: 'securityfilter', version: '2.0'
 
