--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,17 @@ dependencies {
 
     compile 'com.google.cloud:google-cloud-bigquery:1.24.1'
 
+    // https://mvnrepository.com/artifact/jstl/jstl
+    compile group: 'jstl', name: 'jstl', version: '1.2'
+
     // https://mvnrepository.com/artifact/joda-time/joda-time
-    compile group: 'joda-time', name: 'joda-time', version: '2.3'
+    compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
+
+    // https://mvnrepository.com/artifact/org.jadira.usertype/usertype.core
+    compile group: 'org.jadira.usertype', name: 'usertype.core', version: '7.0.0.CR1'
+
+    // https://mvnrepository.com/artifact/javax.mail/mail
+    compile group: 'javax.mail', name: 'mail', version: '1.4'
 
     // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'}
