--- a/pom.xml
+++ b/pom.xml
@@ -106,16 +106,16 @@
     </build>
 
 
-    <groupId>groupId</groupId>
-    <artifactId>Property_Administration</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <dependencies>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-        </dependency>
-    </dependencies>
+    <!--<groupId>groupId</groupId>-->
+    <!--<artifactId>Property_Administration</artifactId>-->
+    <!--<version>1.0-SNAPSHOT</version>-->
+    <!--<dependencies>-->
+        <!--<dependency>-->
+            <!--<groupId>javax.servlet</groupId>-->
+            <!--<artifactId>javax.servlet-api</artifactId>-->
+            <!--<version>3.1.0</version>-->
+        <!--</dependency>-->
+    <!--</dependencies>-->
 
 
 </project>
